Improve hot dev notes ; remove jaxb from odin-api jvm repositories (since now bundled)